[package]
name = "printhor-hwi_skr_mini_e3_v3"
version = "0.0.0"
edition = "2021"
authors = ["Carlos Barrales Ruiz <cbruiz@gmail.com>"]
description = "Printhor Hardware Abstraction for SK3 Mini E3 V2 board"
readme = "README.md"
#repository = "https://github.com/"
keywords = ["hardware", "abstraction"]
license = "MIT"
documentation = "https://docs.rs/printhor_hwi"
homepage = "https://github.com/cbruiz/printhor_hwi"

[lib]

[features]
# Hardware device features
with-usbserial = ["embassy-usb"]
with-printjob = []
with-uart-port-1 = []
with-spi = ["embedded-hal"]
with-hotend = ["embedded-hal"]
with-hotbed = ["embedded-hal"]
with-motion = []
with-probe = ["embedded-hal"]
with-endstops = []
with-sdcard = []
with-fan0 = ["embedded-hal"]
with-fan1 = ["embedded-hal"]
with-laser = ["embedded-hal"]
with-defmt = []
with-trinamic = []
sdcard-uses-spi = []
ili9341_parallel = []
ili9341_spi = ["with-spi"]

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
alloc-cortex-m = { version = "0.4.4", default-features = false, features = []}
embassy-stm32 = { version = "*", default-features = false, git = "https://github.com/embassy-rs/embassy", rev = "3de01bc22332f37e38e7661ee7a3b403da0b096a", features = ["stm32g0b1re", "nightly", "rt", "unstable-traits", "memory-x", "exti", "unstable-pac", "time-driver-tim4"] }
embassy-executor = { version = "*", default-features = false, git = "https://github.com/embassy-rs/embassy", rev = "3de01bc22332f37e38e7661ee7a3b403da0b096a", features = ["nightly", "integrated-timers", "executor-interrupt", "executor-thread", "arch-cortex-m"] }
embassy-sync = { version = "*", git = "https://github.com/embassy-rs/embassy", rev = "3de01bc22332f37e38e7661ee7a3b403da0b096a", features = [] }
embassy-time = { version = "*", git = "https://github.com/embassy-rs/embassy", rev = "3de01bc22332f37e38e7661ee7a3b403da0b096a", features = ["tick-hz-32_768"] }
embassy-futures = { version = "*", git = "https://github.com/embassy-rs/embassy", rev = "3de01bc22332f37e38e7661ee7a3b403da0b096a", features = [] }
defmt = {version = "0.3.4"}

embedded-hal = { version = "0.2.7", default-features = false, optional = true }
embassy-usb = { version = "*", git = "https://github.com/embassy-rs/embassy", rev = "3de01bc22332f37e38e7661ee7a3b403da0b096a", features = [], optional = true }

printhor-hwa-common = { version = "*", path= "../../printhor-hwa-common" }
async-gcode = {version = "*", default-features = false, features=["parse-trailing-comment", "optional-value", "string-value"], git="https://github.com/cbruiz/async-gcode.git", branch= "feature/embedded-productivization" }
futures = { version = "0.3.17", default-features = false, features = [] }