[package]
name = "printhor-hwi_skr_mini_e3_v3"
version = "0.0.1"
edition = "2021"
authors = ["Carlos Barrales Ruiz <cbruiz@gmail.com>"]
description = "Printhor Hardware Abstraction for SK3 Mini E3 V2 board"
readme = "README.md"
repository = "https://github.com/cbruiz/printhor"
keywords = ["hardware", "abstraction"]
license = "MIT"
documentation = "https://docs.rs/prinThor"
homepage = "https://github.com/cbruiz/printhor"

[lib]

[features]
# Hardware device features
with-usbserial = ["embassy-usb"]
with-printjob = []
with-uart-port-1 = []
with-spi = ["embedded-hal"]
with-hotend = ["embedded-hal"]
with-hotbed = ["embedded-hal"]
with-motion = []
with-probe = ["embedded-hal"]
with-endstops = []
with-sdcard = []
with-fan0 = ["embedded-hal"]
with-fan1 = ["embedded-hal"]
with-laser = ["embedded-hal"]
with-defmt = []
with-trinamic = []
sdcard-uses-spi = []
ili9341_parallel = []
ili9341_spi = ["with-spi"]

[dependencies]
defmt = {version = "0.3"}
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
alloc-cortex-m = { version = "0.4.4", default-features = false, features = []}

embassy-stm32 = { version = "*", default-features = false, git = "https://github.com/embassy-rs/embassy", rev = "e0727fe1f6bd1b8c9c356f33991b522956251ba1", features = ["defmt", "stm32g0b1re", "nightly", "rt", "unstable-traits", "memory-x", "unstable-pac", "time-driver-tim4"] }
#embassy-stm32 = { version = "*", default-features = false, path = "../../../embassy/embassy-stm32", features = ["defmt", "stm32g0b1re", "nightly", "rt", "unstable-traits", "memory-x", "unstable-pac", "time-driver-tim4"] }
embassy-executor = { version = "*", default-features = false, git = "https://github.com/embassy-rs/embassy", rev = "e0727fe1f6bd1b8c9c356f33991b522956251ba1", features = ["defmt", "nightly", "integrated-timers", "executor-interrupt", "executor-thread", "arch-cortex-m"] }
#embassy-executor = { version = "*", default-features = false, path = "../../../embassy/embassy-executor", features = ["defmt", "nightly", "integrated-timers", "executor-interrupt", "executor-thread", "arch-cortex-m"] }
embassy-sync = { version = "*", git = "https://github.com/embassy-rs/embassy", rev = "e0727fe1f6bd1b8c9c356f33991b522956251ba1", features = ["defmt"] }
#embassy-sync = { version = "*", path = "../../../embassy/embassy-sync", features = ["defmt"] }
embassy-time = { version = "*", git = "https://github.com/embassy-rs/embassy", rev = "e0727fe1f6bd1b8c9c356f33991b522956251ba1", features = ["defmt", "tick-hz-100_000"] }
#embassy-time = { version = "*", path = "../../../embassy/embassy-time", features = ["defmt", "tick-hz-100_000"] }
embassy-futures = { version = "*", git = "https://github.com/embassy-rs/embassy", rev = "e0727fe1f6bd1b8c9c356f33991b522956251ba1", features = [] }
#embassy-futures = { version = "*", path = "../../../embassy/embassy-futures", features = [] }
embassy-usb = { version = "*", git = "https://github.com/embassy-rs/embassy", rev = "e0727fe1f6bd1b8c9c356f33991b522956251ba1", features = [], optional = true }
#embassy-usb = { version = "*", path = "../../../embassy/embassy-usb", features = [], optional = true }

embedded-hal = { version = "0.2.7", default-features = false, optional = true }
printhor-hwa-common = { version = "*", path= "../../printhor-hwa-common" }
async-gcode = {version = "*", default-features = false, features=["parse-trailing-comment", "optional-value", "string-value"], git="https://github.com/cbruiz/async-gcode.git", branch= "feature/embedded-productivization" }
futures = { version = "0.3.29", default-features = false, features = [] }